# rayon_bench

./: README.md
crates/bench/: Cargo.toml
crates/bench/benches/: main.rs
crates/bench/src/: main.rs
crates/rayon-demo/: Cargo.toml
crates/rayon-demo/src/: map_collect.rs
