[package]
name = "rayon_bench"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon_demo = { path = "../rayon-demo", package = "rayon-demo" }

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "main"
harness = false